@@ -6,7 +6,6 @@ eval '(exit $?0)' && eval 'exec perl -S $0 ${1+"$@"}'
 # -*- perl -*-
 
 use lib "$ENV{ACE_ROOT}/bin";
-use PerlACE::Run_Test;
 use PerlACE::TestTarget;
 
 $debug_level = '0';
@@ -17,27 +16,10 @@ foreach $i (@ARGV) {
     }
 }
 
-#my $target = PerlACE::TestTarget::create_target ($PerlACE::TestConfig);
-my $server = PerlACE::TestTarget::create_target (1);
-#my $client = new PerlACE::TestTarget;
-my $client = PerlACE::TestTarget::create_target (2);
-if (!defined $server || !defined $client) {
-    exit 1;
-}
+my $server = PerlACE::TestTarget::create_target (1) || die "Create target 1 failed\n";
 
-my $iorbase = "server.ior";
-my $server_iorfile = $server->LocalFile ($iorbase);
-my $client_iorfile = $client->LocalFile ($iorbase);
-$server->DeleteFile($server_iorfile);
-$client->DeleteFile($client_iorfile);
+$SV = $server->CreateProcess ("Bug_3499_Regression", "-ORBdebuglevel $debug_level -ORBGestalt CURRENT");
 
-if (PerlACE::is_vxworks_test()) {
-    $SV = new PerlACE::ProcessVX ("Bug_3499_Regression", "-ORBGestalt CURRENT");
-}
-else {
-    $SV = $server->CreateProcess ("Bug_3499_Regression", "-ORBGestalt CURRENT");
-}
-
-$SV->SpawnWaitKill (1000);
+$SV->SpawnWaitKill ($server->ProcessStartWaitInterval());
 
 exit 0;
